fixed table spacing and nav bar
- Fixed nav bar: made sticky, actually show nav bar on non-home pages, highlight which page user is on
- Fixed spacing: changed polaroid rectangle and spacing in between

--- a/style.css
+++ b/style.css
@@ -64,18 +64,14 @@ li a:hover {
   background-color: #111;
 }
 
-<!----------------------------------------------------------->
 h1 {
   font-family: 'times new roman', Times, serif;
   text-align : center;
   font-size : 300%;
 }
-table, th, td{
-      border: 1px solid darkseagreen;
-      background-color: darkseagreen;
-    }
+
 td{
-   text-align: left;
+   text-align: center;
   }
 img{
   text-align:center;
@@ -87,4 +83,37 @@ h2{
 h3{
   font-size : 125%;
   text-align : center;
+}
+.center{
+  text-align: center;
+}
+/*stuff for sticky navbar*/
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+.content {
+  padding: 16px;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+.sticky + .content {
+  padding-top: 60px;
+}
+
+.centerimage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
